# reservation-bot

./: .env.example  .gitignore  Dockerfile.availability  Dockerfile.worker  README.md  RUN_OLD_CHECKER.sh  SETUP_AND_RUN_GUIDE.md  alias_manager.py  booking_playwright_worker.py  docker-compose.availability.yml  docker-compose.worker-pool.yml  flare.py  flare_bot.py  local_availability_debug.py  local_availability_proxy_debug.py  local_availability_proxy_manual.py  local_real_chrome_isp_test.py  local_real_chrome_no_proxy_test.py  pyproject.toml  requirements.txt  setup_vm.py  util.py
master/: __init__.py  availability.py  availability_browser_checker.py  availability_checker.py  booking_browser_lane.py  google_sheets.py  main.py  queue_dispatcher.py  reporting_worker.py  scheduler.py  task_store.py
shared/: __init__.py  config.py  iproyal_proxy.py  models.py  rabbitmq.py
tests/: test_flare_bot_artifacts.py  test_flare_bot_state_machine.py  test_master_availability.py  test_master_availability_checker.py  test_master_google_sheets.py  test_master_main.py  test_master_queue_dispatcher.py  test_reporting_worker.py  test_setup_vm.py  test_shared_config.py  test_shared_iproyal_proxy.py  test_shared_rabbitmq.py  test_worker_email_resolver.py  test_worker_flaresolverr_pool.py  test_worker_main.py
tools/: generate_iproyal_proxies.py
worker/: __init__.py  email_resolver.py  flaresolverr_pool.py  worker_main.py
