[project]
name = "selenium-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "bs4>=0.0.2",
    "faker>=40.4.0",
    "fastapi>=0.116.1",
    "google-auth>=2.41.1",
    "pika>=1.3.2",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "uvicorn>=0.35.0",
    "zendriver>=0.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
